Sun Jul 31 13:44:06 GMT 2011  Olly Betts <olly@survex.com>

	* api/valueiterator.cc,include/xapian/valueiterator.h: Rename private
	  ValueIterator::deref() method to decref() (since dereference has
	  another meaning to the intended "remove a reference").

Sun Jul 31 11:27:33 GMT 2011  Olly Betts <olly@survex.com>

	* api/valueiterator.cc,include/xapian/database.h,
	  include/xapian/document.h,include/xapian/valueiterator.h: Don't use
	  intrusive_ptr to reference count ValueIterator internals, but
	  instead update the reference count in hand-written code.  This is
	  less good in itself, but it means we can inline ValueIterator's
	  default constructor and its destructor in the case where the
	  internal is NULL, which should mean a comparison with the end
	  iterator optimises to a NULL pointer check but without needing
	  the ValueIteratorEnd_ class, which doesn't work as ValueIterator()
	  would in templates or some cases of overload resolution.

Sat Jul 30 12:07:52 GMT 2011  Olly Betts <olly@survex.com>

	* docs/doxygen_api.conf.in: Don't generate XML from doxygen for the
	  bindings - the bindings now do this for themselves.  (ticket#262)

Fri Jul 29 01:33:37 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Just forward declare "class KeyMaker"
	  rather than including <xapian/keymaker.h>.

Fri Jul 29 01:28:08 GMT 2011  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,backends/slowvaluelist.cc,
	  include/xapian/database.h,matcher/valuestreamdocument.cc: Change
	  Database::get_document_lazily_() to return void* so we don't need
	  to include xapian/document.h from xapian/database.h just to get
	  Document::Internal declared.  This doesn't affect user code, but
	  reduces the number of files which need to be rebuilt in the library
	  when xapian/document.h changes.

Wed Jul 27 05:59:32 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/matchspy.h: Remove unnecessary header includes.
